--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
     "noEmit": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "strict": true,
-    "include": ["./src/**/*", "./storybook/**/*"]
+    "strict": true
   }
 }
