--- a/package.json
+++ b/package.json
@@ -5,7 +5,19 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "stories": "yarn prestorybook && yarn storybook",
+    "prestorybook": "rnstl",
+    "storybook": "STORYBOOK=true node node_modules/react-native/local-cli/cli.js start --resetCache"
+  },
+  "config": {
+    "react-native-storybook-loader": {
+      "searchDir": [
+        "./src"
+      ],
+      "pattern": "**/*.stories.tsx",
+      "outputFile": "./storybook/storyLoader.js"
+    }
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
@@ -43,6 +55,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-react-native": "^3.10.0",
+    "react-native-storybook-loader": "^2.0.2",
     "typescript": "~4.0.0"
   },
   "private": true
