--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@react-navigation/stack": "^5.14.3",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "expo-web-browser": "~8.6.0",
     "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
