--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/bottom-tabs": "^5.11.8",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "async-mutex": "^0.3.1",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
     "expo-web-browser": "~8.6.0",
